--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         </div>
 
         <p class="fade">Solving The Digital Talent Issues</p>
-        <button class="fade sign-up-button"
+        <!-- <button class="fade sign-up-button"
             onclick="location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSd-lcUrgYuonRoXuQhK1DToMrE9fOOVKrWlhRcLWBTBPsaiZg/viewform';">Sign
-            Up Now!</button>
+            Up Now!</button> -->
 
     </header>
 
@@ -258,9 +258,9 @@
                 <button class="accordion">Timeline</button>
                 <div class="panel">
                     <ul>
-                        <li>Bootcamp Day 1 (13 Agustus 2021)<br>Time: 13.30 - 15.30 WIB</li>
+                        <li>Bootcamp Day 1 (13 Agustus 2021)<br>Time: 19.30 - 21.30 WIB</li>
                         <li>Bootcamp Day 2 (15 Agustus 2021)<br>Time: 10.00 - 12.00 WIB</li>
-                        <li>Bootcamp Day 3 (16 Agustus 2021)<br>Time: 13.00 - 15.00 WIB</li>
+                        <li>Bootcamp Day 3 (TBA)</li>
                     </ul>
                 </div>
 
